    extracted from the connexion implementations into a new type called
    IPacketScheduler.  Two implementations are currently provided:
    RoundRobinPacketScheduler processes the channels in  a round-robin
    order, whereas ImmediatePacketScheduler processing messages
    on a first-come, first-served basis.  Packet schedulers are
    created by connexion instances.

  * There have been some major renames:

      * Message.Id has been renamed Channel.  The use of 'id' was
	somewhat ambiguous and causing confusion.  All uses of 'id' to
	mean a channel id or a stream id have been redone to use channel. 
	Described in <https://papyrus.usask.ca/trac/gt/ticket/74>.

      * The use of UniqueIdentity has been renamed to simply Identity. 
	  * IConnexion.UniqueIdentity -> Identity
	  * IStream.UniqueIdentity -> Identity
	  * GTCapabilities.CLIENT_ID -> CLIENT_GUID
	Although the identity value is unique between clients
	attached to the same server, the values are not globally
	unique.  Clients *do* have a 'Guid' property, however, which
	is communicated to the server.

      * GT.Net.BaseAcceptor has been renamed to IPBasedAcceptor,
	to reflect its IP-centric implementation.

      * GT.Net.IAcceptor's NewClientEvent event has been renamed
	to NewTransportAccepted.

      * As part of the renames, some non-API but possibly visible classes
	have also been renamed for clarity:

	  * To better reflect their intentions:
	      ClientConnexion -> ConnexionToClient
	      ServerConnexion -> ConnexionToServer
		* 'server' field -> 'owner' to match ConnexionToClient

  * Other changes:

      * Times have been moved to be specified using System.TimeSpan
	instances.  Notable changes include to the Sleep() methods on
	GT.Net.Client and GT.Net.Server, GT.Net.DefaultServerConfiguration,
	the tuple stream methods on GT.Net.Client, GT.Net.PingedNotification,
	GT.Net.DelayedBinaryStream, and GT.Net.AggregatedSharedDictionary.
